| Bug #30884 | Incorrect out of order buckets in api/mysqld on node failure | ||
|---|---|---|---|
| Submitted: | 7 Sep 2007 7:28 | Modified: | 8 Sep 2007 10:24 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | telco-6.2.5 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[7 Sep 2007 7:28]
Jonas Oreland
[7 Sep 2007 8:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/33885 ChangeSet@1.2608, 2007-09-07 07:30:02+02:00, jonas@perch.ndb.mysql.com +4 -0 ndb - bug#30884 Fix assignement of "fake events" so that they dont cause out of order buckets
[8 Sep 2007 10:24]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented fix in mysql-5.1.22-ndb-6.2.6 and mysql-5.1.22-ndb-6.3.2 changelogs.
Closed, since this is a CGE-only fix.
[8 Sep 2007 10:26]
Jon Stephens
Documented fix as follows:
For micro-GCPs, fixed the assignment of <quote>fake</quote>
CGI events so that they do not cause buckets to be sent out
of order. Now, when assigning a GCI to a non-GCI event (that
is, creating a pseudo-GCI or <quote>fake</quote> CGI), the
GCI that is to arrive is always initiated, even if no known
GCI exists, which could occur in the event of a
node failure. (Bug #30884)
Jonas, let me know if this needs to be changed. Thanks!
