ndb - bug#30884   Fix assignement of "fake events" so that they dont cause out of order buckets